--- a/Entrega1.ipynb
+++ b/Entrega1.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "id": "5483b8fa",
    "metadata": {},
    "outputs": [],
@@ -62,10 +62,8 @@
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras.layers import TextVectorization\n",
-    "from tensorflow.keras.optimizers import SGD\n",
     "from tensorflow.keras import regularizers\n",
-    "from tensorflow.keras.optimizers import Adam, Adagrad\n",
-    "from tensorflow.keras.activations import gelu\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "from keras.callbacks import EarlyStopping\n",
     "from keras.utils import pad_sequences\n",
     "from sklearn.preprocessing import LabelEncoder\n",
