--- a/Entrega2-2.ipynb
+++ b/Entrega2-2.ipynb
@@ -1,25 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Desactivar logging duplicado\n",
-    "import logging\n",
-    "logging.getLogger(\"transformers\").setLevel(logging.ERROR)\n",
-    "logging.getLogger(\"torch\").setLevel(logging.ERROR)\n",
-    "\n",
-    "# Evitar duplicación de salida en Jupyter\n",
-    "import sys\n",
-    "if hasattr(sys.stdout, '_original_write'):\n",
-    "    sys.stdout.write = sys.stdout._original_write\n",
-    "if hasattr(sys.stderr, '_original_write'):\n",
-    "    sys.stderr.write = sys.stderr._original_write"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "FbP80vHtn2oe"
@@ -54,16 +35,10 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import seaborn as sns\n",
-    "import re\n",
-    "import nltk\n",
     "import torch\n",
     "import emoji\n",
     "\n",
-    "from tensorflow.keras.utils import pad_sequences\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
-    "from sklearn.utils import resample, class_weight\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
     "\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
@@ -632,7 +607,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dataset personalizado para PyTorch\n",
+    "# Dataset ajustado a PyTorch\n",
     "class TweetDataset(Dataset):\n",
     "    def __init__(self, input_ids, attention_mask, labels):\n",
     "        self.input_ids = input_ids\n",
@@ -654,9 +629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preparar conjuntos de entrenamiento, validación y prueba\n",
-    "\n",
-    "70% para entrenamiento, 15% para validación y 15% para pruebas\n"
+    "Preparar conjuntos de entrenamiento, validación y prueba. 70% para entrenamiento, 15% para validación y 15% para pruebas\n"
    ]
   },
   {
@@ -793,7 +766,7 @@
     "\n",
     "print(\"Class weights:\", tensorPesos)\n",
     "\n",
-    "# Configurar Learning Rate Scheduler con warmup\n",
+    "# Configurar pérdidas con class weights\n",
     "criterion = torch.nn.CrossEntropyLoss(weight=tensorPesos)\n",
     "\n",
     "# Definir épocas\n",
@@ -830,7 +803,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Función de entrenamiento con BERTweet\n"
+    "### Fine Tuning BERTweet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definir función de entrenamiento"
    ]
   },
   {
@@ -840,9 +820,6 @@
    "outputs": [],
    "source": [
     "def entrenamientoBERTweet(model, train_loader, val_loader, test_loader, optimizer, criterion, device, scheduler=None, epochs=3, patience=4):\n",
-    "    \"\"\"\n",
-    "    Función de entrenamiento para BERTweet con early stopping, gradient clipping y learning rate scheduling\n",
-    "    \"\"\"\n",
     "    history = {\n",
     "        'loss': [],\n",
     "        'accuracy': [],\n",
@@ -850,18 +827,18 @@
     "        'val_accuracy': []\n",
     "    }\n",
     "    \n",
-    "    best_val_loss = float('inf')\n",
-    "    patience_counter = 0\n",
-    "    best_model_state = None\n",
+    "    mejorLossVal = float('inf')\n",
+    "    contPaciencia = 0\n",
+    "    mejorModelo = None\n",
     "    \n",
-    "    for epoch in range(epochs):\n",
+    "    for epoca in range(epochs):\n",
     "        # Fase de entrenamiento\n",
     "        model.train()\n",
-    "        train_loss = 0\n",
-    "        train_correct = 0\n",
-    "        train_total = 0\n",
+    "        trainLoss = 0\n",
+    "        trainCorrect = 0\n",
+    "        trainTotal = 0\n",
     "        \n",
-    "        print(f\"\\nÉpoca {epoch + 1}/{epochs}\", flush=True)\n",
+    "        print(f\"\\nÉpoca {epoca + 1}/{epochs}\", flush=True)\n",
     "        print_every = 50  # Imprimir cada 50 batches\n",
     "        \n",
     "        for batch_idx, batch in enumerate(train_loader):\n",
@@ -887,26 +864,26 @@
     "            optimizer.step()\n",
     "            \n",
     "            # Métricas\n",
-    "            train_loss += loss.item()\n",
+    "            trainLoss += loss.item()\n",
     "            predictions = torch.argmax(logits, dim=1)\n",
-    "            train_correct += (predictions == labels).sum().item()\n",
-    "            train_total += labels.size(0)\n",
+    "            trainCorrect += (predictions == labels).sum().item()\n",
+    "            trainTotal += labels.size(0)\n",
     "            \n",
     "            # Imprimir progreso cada ciertos batches\n",
     "            if (batch_idx + 1) % print_every == 0:\n",
-    "                current_loss = train_loss / (batch_idx + 1)\n",
-    "                current_acc = train_correct / train_total\n",
-    "                print(f\"  Batch {batch_idx + 1}/{len(train_loader)} - Loss: {current_loss:.4f} - Acc: {current_acc:.4f}\", flush=True)\n",
+    "                lossActual = trainLoss / (batch_idx + 1)\n",
+    "                accActual = trainCorrect / trainTotal\n",
+    "                print(f\"  Batch {batch_idx + 1}/{len(train_loader)} - Loss: {lossActual:.4f} - Acc: {accActual:.4f}\", flush=True)\n",
     "        \n",
     "        # Promedios de entrenamiento\n",
-    "        avg_train_loss = train_loss / len(train_loader)\n",
-    "        train_accuracy = train_correct / train_total\n",
+    "        trainAvgLoss = trainLoss / len(train_loader)\n",
+    "        trainAcc = trainCorrect / trainTotal\n",
     "        \n",
     "        # Fase de validación\n",
     "        model.eval()\n",
-    "        val_loss = 0\n",
-    "        val_correct = 0\n",
-    "        val_total = 0\n",
+    "        valLoss = 0\n",
+    "        valCorrect = 0\n",
+    "        valTotal = 0\n",
     "        \n",
     "        with torch.no_grad():\n",
     "            for batch in val_loader:\n",
@@ -919,47 +896,47 @@
     "                \n",
     "                loss = criterion(logits, labels)\n",
     "                \n",
-    "                val_loss += loss.item()\n",
+    "                valLoss += loss.item()\n",
     "                predictions = torch.argmax(logits, dim=1)\n",
-    "                val_correct += (predictions == labels).sum().item()\n",
-    "                val_total += labels.size(0)\n",
+    "                valCorrect += (predictions == labels).sum().item()\n",
+    "                valTotal += labels.size(0)\n",
     "        \n",
     "        # Promedios de validación\n",
-    "        avg_val_loss = val_loss / len(val_loader)\n",
-    "        val_accuracy = val_correct / val_total\n",
+    "        valAvgLoss = valLoss / len(val_loader)\n",
+    "        valAcc = valCorrect / valTotal\n",
     "        \n",
     "        # Guardar métricas\n",
-    "        history['loss'].append(avg_train_loss)\n",
-    "        history['accuracy'].append(train_accuracy)\n",
-    "        history['val_loss'].append(avg_val_loss)\n",
-    "        history['val_accuracy'].append(val_accuracy)\n",
+    "        history['loss'].append(trainAvgLoss)\n",
+    "        history['accuracy'].append(trainAcc)\n",
+    "        history['val_loss'].append(valAvgLoss)\n",
+    "        history['val_accuracy'].append(valAcc)\n",
     "        \n",
     "        # Actualizar learning rate scheduler\n",
     "        if scheduler is not None:\n",
     "            scheduler.step()\n",
-    "            current_lr = optimizer.param_groups[0]['lr']\n",
-    "            print(f\"  Learning Rate: {current_lr:.2e}\", flush=True)\n",
+    "            lrActual = optimizer.param_groups[0]['lr']\n",
+    "            print(f\"  Learning Rate: {lrActual:.2e}\", flush=True)\n",
     "        \n",
     "        # Early stopping\n",
-    "        if avg_val_loss < best_val_loss:\n",
-    "            best_val_loss = avg_val_loss\n",
-    "            patience_counter = 0\n",
-    "            best_model_state = model.state_dict().copy()\n",
+    "        if valAvgLoss < mejorLossVal:\n",
+    "            mejorLossVal = valAvgLoss\n",
+    "            contPaciencia = 0\n",
+    "            mejorModelo = model.state_dict().copy()\n",
     "        else:\n",
-    "            patience_counter += 1\n",
-    "            if patience_counter >= patience:\n",
-    "                print(f\"Early stopping activado en época {epoch + 1}\", flush=True)\n",
+    "            contPaciencia += 1\n",
+    "            if contPaciencia >= patience:\n",
+    "                print(f\"Early stopping activado en época {epoca + 1}\", flush=True)\n",
     "                break\n",
     "    \n",
     "    # Restaurar mejor modelo\n",
-    "    if best_model_state is not None:\n",
-    "        model.load_state_dict(best_model_state)\n",
+    "    if mejorModelo is not None:\n",
+    "        model.load_state_dict(mejorModelo)\n",
     "        print(\"Modelo restaurado al mejor estado (menor val_loss)\", flush=True)\n",
     "    \n",
     "    # Evaluación final en test\n",
     "    model.eval()\n",
-    "    test_correct = 0\n",
-    "    test_total = 0\n",
+    "    testCorrect = 0\n",
+    "    testTotal = 0\n",
     "    \n",
     "    with torch.no_grad():\n",
     "        for batch in test_loader:\n",
@@ -971,12 +948,12 @@
     "            logits = outputs.logits\n",
     "            \n",
     "            predictions = torch.argmax(logits, dim=1)\n",
-    "            test_correct += (predictions == labels).sum().item()\n",
-    "            test_total += labels.size(0)\n",
+    "            testCorrect += (predictions == labels).sum().item()\n",
+    "            testTotal += labels.size(0)\n",
     "\n",
     "    \n",
-    "    test_accuracy = test_correct / test_total\n",
-    "    print(f\"\\nAccuracy de pruebas: {test_accuracy:.4f}\", flush=True)\n",
+    "    testAcc = testCorrect / testTotal\n",
+    "    print(f\"\\nAccuracy de pruebas: {testAcc:.4f}\", flush=True)\n",
     "    return history\n",
     "    "
    ]
@@ -985,7 +962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Entrenar el modelo BERTweet\n"
+    "Realizar Entrenamiento"
    ]
   },
   {
@@ -1070,7 +1047,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predicciones y Matriz de Confusión\n"
+    "### Resultados"
    ]
   },
   {
@@ -1099,17 +1076,8 @@
     "        all_labels.extend(labels.cpu().numpy())\n",
     "\n",
     "# Convertir a arrays de numpy\n",
-    "yPred_labels = np.array(all_predictions)\n",
-    "yTest_labels = np.array(all_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graficaMatriz(yTest_labels, yPred_labels)"
+    "yPred = np.array(all_predictions)\n",
+    "yTest = np.array(all_labels)"
    ]
   },
   {
@@ -1134,19 +1102,21 @@
     }
    ],
    "source": [
-    "graficaMatrizPorcentaje(yTest_labels, yPred_labels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Gráficas de evolución del entrenamiento\n"
+    "graficaMatrizPorcentaje(yTest, yPred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graficaMatriz(yTest, yPred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1166,16 +1136,17 @@
     }
    ],
    "source": [
-    "# Adaptar la función de graficado para usar el historial de BERTweet\n",
+    "# Adaptar el historial para poder usar funciones graficadoras\n",
+    "\n",
     "class HistoryWrapper:\n",
     "    \"\"\"Wrapper para hacer que el historial de BERTweet sea compatible con la función graficaEntrenamiento\"\"\"\n",
     "    def __init__(self, history_dict):\n",
     "        self.history = history_dict\n",
     "\n",
-    "resultado_wrapper = HistoryWrapper(resultadoBERT)\n",
+    "resultadoWrapper = HistoryWrapper(resultadoBERT)\n",
     "\n",
     "# Graficar evolución del accuracy\n",
-    "graficaEntrenamiento(resultado_wrapper, \"accuracy\", \"val_accuracy\", \"Evolución del Accuracy (BERTweet)\", \"Accuracy\")\n"
+    "graficaEntrenamiento(resultadoWrapper, \"accuracy\", \"val_accuracy\", \"Evolución del Accuracy (BERTweet)\", \"Accuracy\")\n"
    ]
   },
   {
@@ -1200,8 +1171,34 @@
     }
    ],
    "source": [
-    "# Graficar evolución de las pérdidas\n",
-    "graficaEntrenamiento(resultado_wrapper, \"loss\", \"val_loss\", \"Evolución de las Pérdidas (BERTweet)\", \"Pérdida\")"
+    "graficaEntrenamiento(resultadoWrapper, \"loss\", \"val_loss\", \"Evolución de las Pérdidas (BERTweet)\", \"Pérdida\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pruebas Preliminares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transfer Learning\n",
+    "\n",
+    "|![alt text](Imágenes/Bert1-1.png) | ![alt text](Imágenes/Bert1-2.png) | ![alt text](Imágenes/Bert1-3.png) |\n",
+    "|-|-|-"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fine tuning de las últimas 4 capas con batch size 32, 10 épocas con early stopping patience 4, learning rate scheduler weight decay, y gradient clipping\n",
+    "\n",
+    "|![alt text](Imágenes/Bert2-1.png) | ![alt text](Imágenes/Bert2-2.png) | ![alt text](Imágenes/Bert2-3.png) |\n",
+    "|-|-|-"
    ]
   }
  ],
