--- a/Entrega2-1.ipynb
+++ b/Entrega2-1.ipynb
@@ -1143,7 +1143,7 @@
       "source": [
         "Submuestreo con la misma cantidad de instancias en todas las clase\n",
         "\n",
-        "|![alt text](Imágenes/3-1.png) | ![alt text](Imágenes/3-2.png) | ![alt text](Imágenes/3-3.png) |\n",
+        "|![alt text](./Imágenes/3-1.png) | ![alt text](./Imágenes/3-2.png) | ![alt text](./Imágenes/3-3.png) |\n",
         "|-|-|-"
       ]
     },
