--- a/Entrega2-1.ipynb
+++ b/Entrega2-1.ipynb
@@ -1143,8 +1143,13 @@
       "source": [
         "Submuestreo con la misma cantidad de instancias en todas las clase\n",
         "\n",
-        "|![alt text](./Imágenes/3-1.png) | ![alt text](./Imágenes/3-2.png) | ![alt text](./Imágenes/3-3.png) |\n",
-        "|-|-|-"
+        "<table>\n",
+        "  <tr>\n",
+        "    <td><img src=\"Imágenes/3-1.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/3-2.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/3-3.png\" width=\"300\"></td>\n",
+        "  </tr>\n",
+        "</table>\n"
       ]
     },
     {
