--- a/Entrega2-2.ipynb
+++ b/Entrega2-2.ipynb
@@ -1187,8 +1187,13 @@
    "source": [
     "Transfer Learning\n",
     "\n",
-    "|![alt text](Imágenes/Bert1-1.png) | ![alt text](Imágenes/Bert1-2.png) | ![alt text](Imágenes/Bert1-3.png) |\n",
-    "|-|-|-"
+    "<table>\n",
+    "  <tr>\n",
+    "    <td><img src=\"Imágenes/Bert1-1.png\" width=\"300\"></td>\n",
+    "    <td><img src=\"Imágenes/Bert1-2.png\" width=\"300\"></td>\n",
+    "    <td><img src=\"Imágenes/Bert1-3.png\" width=\"300\"></td>\n",
+    "  </tr>\n",
+    "</table>\n"
    ]
   },
   {
@@ -1197,8 +1202,13 @@
    "source": [
     "Fine tuning de las últimas 4 capas con batch size 32, 10 épocas con early stopping patience 4, learning rate scheduler weight decay, y gradient clipping\n",
     "\n",
-    "|![alt text](Imágenes/Bert2-1.png) | ![alt text](Imágenes/Bert2-2.png) | ![alt text](Imágenes/Bert2-3.png) |\n",
-    "|-|-|-"
+    "<table>\n",
+    "  <tr>\n",
+    "    <td><img src=\"Imágenes/Bert2-1.png\" width=\"300\"></td>\n",
+    "    <td><img src=\"Imágenes/Bert2-2.png\" width=\"300\"></td>\n",
+    "    <td><img src=\"Imágenes/Bert2-3.png\" width=\"300\"></td>\n",
+    "  </tr>\n",
+    "</table>"
    ]
   }
  ],
