--- a/Entrega2-1.ipynb
+++ b/Entrega2-1.ipynb
@@ -1158,8 +1158,13 @@
       "source": [
         "Submuestreo del 50% en la clase negativa\n",
         "\n",
-        "|![alt text](Imágenes/2-1.jpg) | ![alt text](Imágenes/2-2.jpg) | ![alt text](Imágenes/2-3.jpg) |\n",
-        "|-|-|-"
+        "<table>\n",
+        "  <tr>\n",
+        "    <td><img src=\"Imágenes/2-1.jpg\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/2-2.jpg\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/2-3.jpg\" width=\"300\"></td>\n",
+        "  </tr>\n",
+        "</table>\n"
       ]
     },
     {
@@ -1168,8 +1173,13 @@
       "source": [
         "Submuestreo del 80% en la clase negativa\n",
         "\n",
-        "|![alt text](Imágenes/1-3.png) | ![alt text](Imágenes/1-1.png) | ![alt text](Imágenes/1-2.png) |\n",
-        "|-|-|-"
+        "<table>\n",
+        "  <tr>\n",
+        "    <td><img src=\"Imágenes/1-3.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/1-1.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/1-2.png\" width=\"300\"></td>\n",
+        "  </tr>\n",
+        "</table>\n"
       ]
     },
     {
@@ -1178,8 +1188,13 @@
       "source": [
         "Sin submuestreo, solo con class weights\n",
         "\n",
-        "|![alt text](Imágenes/6-1.png) | ![alt text](Imágenes/6-2.png) | ![alt text](Imágenes/6-3.png) |\n",
-        "|-|-|-"
+        "<table>\n",
+        "  <tr>\n",
+        "    <td><img src=\"Imágenes/6-1.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/6-2.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/6-3.png\" width=\"300\"></td>\n",
+        "  </tr>\n",
+        "</table>\n"
       ]
     },
     {
@@ -1188,8 +1203,13 @@
       "source": [
         "L2 = 0.0001\n",
         "\n",
-        "|![alt text](Imágenes/7-1.png) | ![alt text](Imágenes/7-2.png) | ![alt text](Imágenes/7-3.png) |\n",
-        "|-|-|-"
+        "<table>\n",
+        "  <tr>\n",
+        "    <td><img src=\"Imágenes/7-1.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/7-2.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/7-3.png\" width=\"300\"></td>\n",
+        "  </tr>\n",
+        "</table>\n"
       ]
     },
     {
@@ -1198,8 +1218,13 @@
       "source": [
         "L2 = 0.01\n",
         "\n",
-        "|![alt text](Imágenes/8-1.png) | ![alt text](Imágenes/8-2.png) | ![alt text](Imágenes/8-3.png) |\n",
-        "|-|-|-"
+        "<table>\n",
+        "  <tr>\n",
+        "    <td><img src=\"Imágenes/8-1.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/8-2.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/8-3.png\" width=\"300\"></td>\n",
+        "  </tr>\n",
+        "</table>\n"
       ]
     },
     {
@@ -1208,8 +1233,13 @@
       "source": [
         "Dos capas de RNN 32 -> 16\n",
         "\n",
-        "|![alt text](Imágenes/9-1.png) | ![alt text](Imágenes/9-2.png) | ![alt text](Imágenes/9-3.png) |\n",
-        "|-|-|-"
+        "<table>\n",
+        "  <tr>\n",
+        "    <td><img src=\"Imágenes/9-1.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/9-2.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/9-3.png\" width=\"300\"></td>\n",
+        "  </tr>\n",
+        "</table>\n"
       ]
     },
     {
@@ -1218,8 +1248,13 @@
       "source": [
         "Dos capas de RNN 32 -> 16 con recurrent dropout 0.3\n",
         "\n",
-        "|![alt text](Imágenes/12-1.png) | ![alt text](Imágenes/12-2.png) | ![alt text](Imágenes/12-3.png) |\n",
-        "|-|-|-"
+        "<table>\n",
+        "  <tr>\n",
+        "    <td><img src=\"Imágenes/12-1.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/12-2.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/12-3.png\" width=\"300\"></td>\n",
+        "  </tr>\n",
+        "</table>\n"
       ]
     },
     {
@@ -1228,8 +1263,13 @@
       "source": [
         "Dos capas de RNN 32 -> 16 con normal dropout 0.3\n",
         "\n",
-        "|![alt text](Imágenes/13-1.png) | ![alt text](Imágenes/13-2.png) | ![alt text](Imágenes/13-3.png) |\n",
-        "|-|-|-"
+        "<table>\n",
+        "  <tr>\n",
+        "    <td><img src=\"Imágenes/13-1.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/13-2.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/13-3.png\" width=\"300\"></td>\n",
+        "  </tr>\n",
+        "</table>\n"
       ]
     },
     {
@@ -1238,8 +1278,13 @@
       "source": [
         "Tres capas de RNN 64 -> 32 -> 16\n",
         "\n",
-        "|![alt text](Imágenes/15-1.png) | ![alt text](Imágenes/15-2.png) | ![alt text](Imágenes/15-3.png) |\n",
-        "|-|-|-"
+        "<table>\n",
+        "  <tr>\n",
+        "    <td><img src=\"Imágenes/15-1.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/15-2.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/15-3.png\" width=\"300\"></td>\n",
+        "  </tr>\n",
+        "</table>\n"
       ]
     },
     {
@@ -1248,8 +1293,13 @@
       "source": [
         "Tres capas de RNN 64 -> 32 -> 16, todas bidireccionales\n",
         "\n",
-        "|![alt text](Imágenes/17-1.png) | ![alt text](Imágenes/17-2.png) | ![alt text](Imágenes/17-3.png) |\n",
-        "|-|-|-"
+        "<table>\n",
+        "  <tr>\n",
+        "    <td><img src=\"Imágenes/17-1.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/17-2.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/17-3.png\" width=\"300\"></td>\n",
+        "  </tr>\n",
+        "</table>\n"
       ]
     },
     {
@@ -1258,8 +1308,13 @@
       "source": [
         "Tres capas de RNN 64 -> 32 -> 16, primera bidireccional\n",
         "\n",
-        "|![alt text](Imágenes/18-1.png) | ![alt text](Imágenes/18-2.png) | ![alt text](Imágenes/18-3.png) |\n",
-        "|-|-|-"
+        "<table>\n",
+        "  <tr>\n",
+        "    <td><img src=\"Imágenes/18-1.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/18-2.png\" width=\"300\"></td>\n",
+        "    <td><img src=\"Imágenes/18-3.png\" width=\"300\"></td>\n",
+        "  </tr>\n",
+        "</table>\n"
       ]
     }
   ],
